# DeepVuln-dev

./: .env.example  .gitignore  AGENTS.md  langgraph.json  latest_commit_diff.txt  pyproject.toml  requirements.txt  run_graph.py  seed_example.md  方案设计.md
app/agent/: __init__.py  model.py
app/core/: __init__.py  config.py  loader.py  ql_library.py  state.py  tools.py
app/graph/: graph.py  new-node.py  node.py  nodes.py  types.py
app/mcp/: chroma_mcp.py  codeql_mcp.py  ragflow_mcp.py
app/rag/: chroma.py  local_chroma.py  milvus.py  qdrant.py  retriever.py
app/semantics/: builder.py
app/semantics/prompts/: annotate_candidates.md
app/semantics/schemas/: semantic_candidates.schema.json  semantic_facts.schema.json
app/semantics/templates/: ProjectSemantics.qll.tpl  _regression_semantic_overlay.ql.tpl  _regression_with_semantics.ql.tpl  qlpack.yml.tpl
app/skills/: diagnose_and_abstract.md  middleware.py  tools.py
mcp/: codeql_mcp.py  ragflow_mcp.py
rag/: __init__.py  builder.py  ragflow.py
scripts/: bootstrap_seed_assets.py
seeds/: seed_assets.json  seed_cases.json
tools/: __init__.py  codeql.py  crawl.py  decorators.py  git_repo.py  retriever.py  search.py
utils/: code_window.py  io.py  json_utils.py  jsonx.py  seed_loader.py
